# wdlkit

./: .gitignore  CHANGES.md  README.md  pyproject.toml  version.py
docs/: style.md
tests/: test_format.py
tests/data/: task.wdl  workflow.wdl
tests/wdl/: simple.wdl  workflow.wdl
wdlkit/: __main__.py  ast.py  formatter.py  utils.py  version.py
wdlkit/templates/: call.wdl  call.wdl.frag  command.wdl  command.wdl.frag  conditional.wdl  conditional.wdl.frag  declarations.wdl  declarations.wdl.frag  document.wdl  imports.wdl  input.wdl.frag  inputs.wdl  meta.wdl  meta.wdl.frag  output.wdl.frag  outputs.wdl  parameter_meta.wdl  parameter_meta.wdl.frag  runtime.wdl  runtime.wdl.frag  scatter.wdl  scatter.wdl.frag  struct.wdl  struct.wdl.frag  task.wdl  workflow.wdl.frag  workflow_body.wdl  workflow_body.wdl.frag
